export button alignment issue fixed

--- a/src/scss/partials/_risk.assessment.scss
+++ b/src/scss/partials/_risk.assessment.scss
@@ -448,8 +448,8 @@ span, ion-radio{
   }
   }
   .score {
-    // color: $color-primary;
-    // font-size: $font-size-xlll;
+     color: $color-error;
+     font-size: $font-size-xl;
     font-weight: $font-bold ;
     margin: 0;  
   }
